--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,7 @@ section {
   flex: 0 0 auto;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .card--title {
@@ -93,4 +94,15 @@ section {
 
 .card--price {
   margin-top: auto;
+}
+
+.card--badge {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  background-color: #ff5a5f;
+  color: #fff;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
 }
